stop pytest timeouts including fixture and reduce global timeout

--- a/pytest.ini
+++ b/pytest.ini
@@ -16,4 +16,5 @@ markers =
         `category_` marker applied to them.
 
 # see https://pypi.org/project/pytest-timeout/
-timeout = 120
+timeout = 60
+timeout_func_only = true
