--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -130,6 +130,7 @@ jobs:
         git fetch --unshallow origin "${{ github.ref }}"
 
     - name: Add github workflow problem matchers
+      if: needs.changes.outputs.backend == 'true'
       run: |
         echo "::add-matcher::.github/matchers/flake8-error-matcher.json"
 
@@ -247,7 +248,7 @@ jobs:
         make prepare-tests-windows
 
     - name: Add github workflow problem matchers
-      if: matrix.python-version == 3.6 && matrix.os == 'ubuntu-latest'
+      if: needs.changes.outputs.backend == 'true' && matrix.python-version == 3.6 && matrix.os == 'ubuntu-latest'
       # only annotate based on test runs on ubuntu: otherwise
       # all errors will be duplicated for each python / os combination
       # therefore, we only enable for the one where most tests are run
