--- a/.github/workflows/ci-model-regression.yml
+++ b/.github/workflows/ci-model-regression.yml
@@ -34,6 +34,7 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       configuration_id: ${{ steps.fc_config.outputs.comment-id }}
+
     steps:
     - name: Checkout main
       uses: actions/checkout@v2
@@ -184,6 +185,9 @@ jobs:
     strategy:
       max-parallel: 1
       matrix: ${{fromJson(needs.read_test_configuration.outputs.matrix)}}
+    outputs:
+      dataset_branch: ${{ matrix.dataset_branch }}
+      dataset_commit: ${{ steps.set-dataset-commit.outputs.dataset-commit }}
     if: "contains(github.event.pull_request.labels.*.name, 'runner:gpu') && github.repository == 'RasaHQ/rasa' && contains(github.event.pull_request.labels.*.name, 'status:model-regression-tests') && needs.read_test_configuration.outputs.configuration_id != ''"
 
     steps:
@@ -197,6 +201,14 @@ jobs:
           token: ${{ secrets.ML_TEST_SA_PAT }}
           path: 'dataset'
           ref: ${{ matrix.dataset_branch }}
+
+      - name: Set dataset commit
+        id: set-dataset-commit
+        working-directory: dataset
+        run: |
+          DATASET_COMMIT=$(git rev-parse HEAD)
+          echo $DATASET_COMMIT
+          echo "::set-output name=dataset-commit::$DATASET_COMMIT"
 
       - name: Set DATASET and CONFIG variables
         id: set_dataset_config_vars
@@ -325,6 +337,9 @@ jobs:
     strategy:
       max-parallel: 1
       matrix: ${{fromJson(needs.read_test_configuration.outputs.matrix)}}
+    outputs:
+      dataset_branch: ${{ matrix.dataset_branch }}
+      dataset_commit: ${{ steps.set-dataset-commit.outputs.dataset-commit }}
     if: "!contains(github.event.pull_request.labels.*.name, 'runner:gpu') && github.repository == 'RasaHQ/rasa' && contains(github.event.pull_request.labels.*.name, 'status:model-regression-tests') && needs.read_test_configuration.outputs.configuration_id != ''"
 
     steps:
@@ -338,6 +353,14 @@ jobs:
           token: ${{ secrets.ML_TEST_SA_PAT }}
           path: 'dataset'
           ref: ${{ matrix.dataset_branch }}
+
+      - name: Set dataset commit
+        id: set-dataset-commit
+        working-directory: dataset
+        run: |
+          DATASET_COMMIT=$(git rev-parse HEAD)
+          echo $DATASET_COMMIT
+          echo "::set-output name=dataset-commit::$DATASET_COMMIT"
 
       - name: Download gomplate
         run: |-
@@ -513,6 +536,8 @@ jobs:
 
             Commit: ${{ github.sha }}, [The full report is available as an artifact.](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
+            Dataset branch: ${{ needs.model_regression_test_gpu.outputs.dataset_branch}}, commit: ${{ needs.model_regression_test_gpu.outputs.dataset_commit}}
+
             ${{ steps.get_results.outputs.result }}
 
       - name: Remove 'status:model-regression-tests' label
@@ -588,6 +613,8 @@ jobs:
           message: |-
 
             Commit: ${{ github.sha }}, [The full report is available as an artifact.](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+            Dataset branch: ${{ needs.model_regression_test_cpu.outputs.dataset_branch}}, commit: ${{ needs.model_regression_test_cpu.outputs.dataset_commit}}
 
             ${{ steps.get_results.outputs.result }}
 
