add moodbot as well

--- a/examples/moodbot/data/stories.yml
+++ b/examples/moodbot/data/stories.yml
@@ -27,3 +27,16 @@ stories:
   - intent: deny
   - action: utter_goodbye
 
+- story: bye
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: mood_great
+  - action: utter_happy
+  - intent: goodbye
+  - action: utter_goodbye
+  - intent: mood_unhappy
+  - action: utter_cheer_up
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
