--- a/examples/moodbot/config.yml
+++ b/examples/moodbot/config.yml
@@ -12,6 +12,8 @@ pipeline:
 policies:
   - name: TEDPolicy
     max_history: 5
+    epochs: 200
+  - name: IntentTEDPolicy
+    max_history: 5
     epochs: 100
-  - name: MemoizationPolicy
   - name: RulePolicy
