--- a/examples/moodbot/config.yml
+++ b/examples/moodbot/config.yml
@@ -10,8 +10,9 @@ pipeline:
     epochs: 50
 
 policies:
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
+#  - name: TEDPolicy
+#    max_history: 5
+#    epochs: 100
   - name: MemoizationPolicy
-  - name: RulePolicy
+    max_history: 6
+#  - name: RulePolicy
