Added pytest-env dependency, added tensorlfow warn log supression for all pytest invocations

--- a/pytest.ini
+++ b/pytest.ini
@@ -20,3 +20,7 @@ markers =
 # see https://pypi.org/project/pytest-timeout/
 timeout = 60
 timeout_func_only = true
+
+# the D: (read: default) prefix specifies that existing env vars are not overwritten
+env =
+    D:TF_CPP_MIN_LOG_LEVEL=2
