--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,7 @@ pytest-cov = "^2.10.0"
 pytest-sanic = "^1.6.1"
 pytest-asyncio = "^0.14.0"
 pytest-xdist = "^1.32.0"
+pytest-env = "^0.6.2"
 pytest = "^6.2.2"
 freezegun = "^1.0.0"
 responses = "^0.12.1"
