--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ joblib = ">=0.15.1,<1.1.0"
 sentry-sdk = ">=0.17.0,<1.2.0"
 aio-pika = "^6.7.1"
 pyTelegramBotAPI = "^3.7.3"
+gssapi = "~1.6"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.10.0"
