--- a/docker/Dockerfile.base-builder
+++ b/docker/Dockerfile.base-builder
@@ -17,6 +17,7 @@ RUN apt-get update -qq && \
   libffi7 \
   libffi-dev \
   libpng-dev \
+  libkrb5-dev \
   && apt-get autoremove -y
 
 # Make sure that all security updates are installed
