code mostly done; have a bug

--- a/examples/moodbot/data/nlu.yml
+++ b/examples/moodbot/data/nlu.yml
@@ -5,16 +5,17 @@ nlu:
     - hey
     - hello
     - hi
+    - hola
     - hello there
     - good morning
     - good evening
-    - moin
     - hey there
     - let's go
     - hey dude
-    - goodmorning
     - goodevening
+    - goodmorning
     - good afternoon
+    - kkll
 
 - intent: goodbye
   examples: |
