--- a/examples/moodbot/config.yml
+++ b/examples/moodbot/config.yml
@@ -1,13 +1,24 @@
 language: en
 
 pipeline:
-  - name: "SpacyNLP"
-    model: "en_core_web_md"
-  - name: "SpacyTokenizer"
-  - name: "SpacyFeaturizer"
-  - name: "DIETClassifier"
-    entity_recognition: False
-    epochs: 50
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+#  - name: LexicalSyntacticFeaturizer
+#  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: char_wb
+    min_ngram: 1
+    max_ngram: 2
+  - name: DIETClassifier
+    epochs: 100
+    constrain_similarities: true
+  - name: EntitySynonymMapper
+  - name: ResponseSelector
+    epochs: 100
+    constrain_similarities: true
+  - name: FallbackClassifier
+    threshold: 0.3
+    ambiguity_threshold: 0.1
 
 policies:
   - name: TEDPolicy
