--- a/examples/moodbot/config.yml
+++ b/examples/moodbot/config.yml
@@ -2,23 +2,20 @@ language: en
 
 pipeline:
   - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-#  - name: LexicalSyntacticFeaturizer
-#  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: char_wb
     min_ngram: 1
-    max_ngram: 2
+    max_ngram: 4
   - name: DIETClassifier
-    epochs: 100
+    epochs: 10
     constrain_similarities: true
+    random_seed: 101
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 100
+    epochs: 10
     constrain_similarities: true
-  - name: FallbackClassifier
-    threshold: 0.3
-    ambiguity_threshold: 0.1
+    random_seet: 101
 
 policies:
   - name: TEDPolicy
