--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,10 +108,10 @@ SQLAlchemy = "~1.3.3"
 sklearn-crfsuite = "~0.3"
 psycopg2-binary = "~2.8.2"
 python-dateutil = "~2.8"
-tensorflow = "~2.5"
+tensorflow = "~2.4"
 tensorflow_hub = "~0.10"
 tensorflow-addons = "~0.13"
-tensorflow-estimator = "~2.5.0"
+tensorflow-estimator = "~2.4.0"
 tensorflow-probability = "~0.11"
 setuptools = ">=41.0.0"
 kafka-python = ">=1.4,<3.0"
@@ -175,7 +175,7 @@ version = "^3.0"
 optional = true
 
 [tool.poetry.dependencies.tensorflow-text]
-version = ">=2.5,<2.6"
+version = "~2.4"
 markers = "sys_platform!='win32'"
 
 [tool.poetry.dependencies."github3.py"]
