--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -111,6 +111,28 @@ jobs:
         export SPHINXBUILD=$(poetry run which sphinx-build)
         cd docs && make SPHINXBUILD=$SPHINXBUILD SPHINXOPTS="-W --keep-going -A html_theme=rasabaster" html
 
+  changelog:
+    name: Check for changelog
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Checkout git repository 🕝
+        uses: actions/checkout@v2
+
+      - name: Assert release includes all changelog entries
+        # check changelog folder only when we create pull request preparing release
+        if: github.event_name == 'pull_request' && startsWith(github.head_ref, 'prepare-release')
+        working-directory: changelog
+        run: |
+          # List all unexpected files in changelog/
+          UNEXPECTED_FILES=$(ls -A --ignore={"README.md",".gitignore","_template.md.jinja2"})
+          # Exit with error if found any unexpected files
+          [[ "$UNEXPECTED_FILES" ]] && \
+          echo "Found the following unexpected files in changelogs/" && \
+          echo "$UNEXPECTED_FILES" && \
+          exit 1 || \
+          echo "Release includes all changelog entries."
+
   test:
     name: Run Tests
     runs-on: ubuntu-latest
