--- a/examples/slot_extraction/data/nlu.yml
+++ b/examples/slot_extraction/data/nlu.yml
@@ -97,20 +97,25 @@ nlu:
     - I'd like to enter some details.
     - I have to provide some information.
 
+- intent: trigger_another_form
+  examples: |
+    - Trigger another form.
+    - Test to trigger another form.
+
 - intent: pet_to_cheer_up
   examples: |
-    - A [dog](animal) would make me happy.
     - A (kitten)(animal) would make me happiest.
-    - I prefer a [cat](animal).
-    - I would love to have a [turtle](animal).
+    - A (dog)(animal) would make me happiest.
+    - A (puppy)(animal) would make me happiest.
+    - A (cat)(animal) would make me happiest.
     - A [puppy](animal)
+    - A [dog](animal)
+    - A [kitten](animal)
+    - A [cat](animal)
 
 - lookup: animal
   examples: |
     - dog
     - cat
-    - turtle
-    - goldfish
-    - tiger
     - puppy
     - kitten
