--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -113,7 +113,7 @@ title = "gitleaks config"
     '''(.*?)(jpg|gif|doc|pdf|bin)$''',
     '''(go.mod|go.sum)$''',
     '''docusaurus.config.js$''',
-    '''credentials.yml$''']
+    '''rasa/data/test_moodbot/credentials.yml$''']
     regexes = [
     # this regex is useful for documentation content: we can still show
     # that users need to configure a private key and include "..." in it
