--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,8 @@ sentry-sdk = ">=0.17.0,<1.3.0"
 aio-pika = "^6.7.1"
 pyTelegramBotAPI = "^3.7.3"
 sanic-prometheus = "^0.2.1"
+jaeger-client = "^4.6.0"
+opentracing = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.10.0"
