--- a/examples/responseselectorbot/config.yml
+++ b/examples/responseselectorbot/config.yml
@@ -2,16 +2,25 @@ language: en
 
 pipeline:
   - name: "WhitespaceTokenizer"
+  - name: "LexicalSyntacticFeaturizer"
   - name: "CountVectorsFeaturizer"
   - name: "DIETClassifier"
-    entity_recognition: False
-    epochs: 50
+    intent_classification: True
+    entity_recognition: True
+    epochs: 2
   - name: ResponseSelector
-    epochs: 50
-
+    epochs: 2
+    use_text_as_label: True
 policies:
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
-  - name: MemoizationPolicy
-  - name: RulePolicy
+# # No configuration for policies was provided. The following default policies were used to train your model.
+# # If you'd like to customize them, uncomment and adjust the policies.
+# # See https://rasa.com/docs/rasa/policies for more information.
+#   - name: MemoizationPolicy
+#   - name: RulePolicy
+#   - name: UnexpecTEDIntentPolicy
+#     max_history: 5
+#     epochs: 100
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: true
