--- a/examples/moodbot/credentials.yml
+++ b/examples/moodbot/credentials.yml
@@ -1,3 +1,7 @@
+rest:
+  jwt_key: "nkjsfnjkn1k2n3"
+  jwt_method: "HS256"
+
 twilio:
   account_sid: "ACbc2dxxxxxxxxxxxx19d54bdcd6e41186"
   auth_token: "e231c197493a7122d475b4xxxxxxxxxx"
