--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -211,18 +211,14 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
         python-version: [ 3.7, 3.8 ]
 
-    services:
-      datadog-agent:
-        image: datadog/agent:latest
-        ports:
-          - 8126:8126
-        env:
-          DD_API_KEY: ${{ secrets.DD_API_KEY }}
-          DD_INSIDE_CI: "true"
-          DD_HOSTNAME: "none"
-          DD_SITE: "datadoghq.eu"
-
     steps:
+    - name: Run DataDog Agent
+      if: needs.changes.outputs.backend == 'true' && !(matrix.python-version == 3.8 && matrix.os == 'windows-latest')
+      run: |
+        docker run --name dd_agent -p 8126:8126  -e "DD_API_KEY=${{ secrets.DD_API_KEY }}" -e "DD_INSIDE_CI=true" -e "DD_HOSTNAME=none" -e "DD_SITE=datadoghq.eu" -e GITHUB_ACTIONS=true -e CI=true datadog/agent:latest
+        docker ps --all --filter name=dd_agent --filter status=running --no-trunc --format "{{.ID}} {{.Status}}"
+        docker port dd_agent
+
     - name: Checkout git repository 🕝
       if: needs.changes.outputs.backend == 'true'
       uses: actions/checkout@v2
@@ -317,6 +313,7 @@ jobs:
         DD_ENV: ${{ matrix.test }}
         DD_SERVICE: rasa
         DD_ARGS: --ddtrace
+        DD_PROFILING_ENABLED: true
       run: |
         make ${{ matrix.test }}
 
